# MetroSim

./: .gitignore  CMakeLists.txt  Exceptii.h  Joc.cpp  Joc.h  Linie.cpp  Linie.h  README.md  Statie.cpp  Statie.h  Tren.cpp  Tren.h  TrenLent.cpp  TrenLent.h  TrenNormal.cpp  TrenNormal.h  TrenRapid.cpp  TrenRapid.h  main.cpp
